<resources>
    <string name="app_name">Meeting</string>
    <string name="str_tab_main">会议提醒</string>
    <string name="str_tab_history">会议历史</string>
    <string name="str_tab_management">会议管理</string>
    <string name="str_person_add">人员录入</string>
    <string name="str_person_num">编号</string>
    <string name="str_num_empty">编号不能为空</string>
    <string name="str_name_empty">名称不能为空</string>
    <string name="str_person_name">姓名</string>
    <string name="str_person_name_format">姓名:%s</string>
    <string name="str_person_no_format">编号:%s</string>
    <string name="str_person_create_format">创建日期:%s</string>
    <string name="str_person_save">保存</string>
    <string name="str_insert_success">人员录入成功</string>
    <string name="str_insert_failure">人员录入失败，请重试</string>
    <string name="loading">加载中...</string>
    <string name="load_fail">加载失败</string>
    <string name="load_end">没有更多</string>
    <string name="str_operate">操作</string>
    <string name="str_skip">跳过</string>
    <string name="str_delete">删除</string>
    <string name="str_skip_meeting">已跳过下次会议主持</string>
    <string name="str_skip_meeting_failure">跳过会议功能失败，请重试</string>
    <string name="str_meeting_already_skip">当前用户已跳过下次会议主持</string>
    <string name="str_host">主持人:</string>
    <string name="str_person_list">人员列表</string>
    <string name="string_today">今天</string>
    <string name="str_yesterday">昨天</string>
    <string name="string_tomorrow">明天</string>
    <string name="str_no_host">无</string>
</resources>
