<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.activity.MainActivity">

    <android.support.v7.widget.Toolbar
            android:id="@+id/tl_person_add_title"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            style="@style/toolbarStyle">

        <TextView
                android:id="@+id/toolbar_title"
                style="@style/toolbarTileStyle"
                android:text="@string/str_person_add"/>
    </android.support.v7.widget.Toolbar>

    <android.support.design.widget.TextInputLayout
            android:id="@+id/til_person_add_num"
            android:layout_marginTop="@dimen/dp_10"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tl_person_add_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <android.support.design.widget.TextInputEditText
                android:id="@+id/et_person_add_num"
                android:inputType="number"
                android:maxLength="6"
                android:gravity="center_vertical"
                android:hint="@string/str_person_num"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
            android:id="@+id/til_person_add_name"
            android:layout_marginTop="@dimen/dp_10"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/til_person_add_num"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <android.support.design.widget.TextInputEditText
                android:id="@+id/et_person_add_name"
                android:inputType="text"
                android:maxLines="30"
                android:lines="1"
                android:gravity="center_vertical"
                android:hint="@string/str_person_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

    </android.support.design.widget.TextInputLayout>


    <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_person_add_save"
            android:text="@string/str_person_save"
            android:layout_marginLeft="@dimen/dp_20"
            android:layout_marginRight="@dimen/dp_20"
            android:layout_marginTop="@dimen/dp_40"
            app:layout_constraintTop_toBottomOf="@+id/til_person_add_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>


</android.support.constraint.ConstraintLayout>