<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <android.support.constraint.ConstraintLayout
                app:layout_constraintTop_toTopOf="parent"
                android:id="@+id/cl_main_yesterday"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_75"
                android:background="@color/color_cccccc">

            <android.support.v7.widget.AppCompatTextView
                    android:text="@string/str_host"
                    android:id="@+id/tv_history_name_desc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintLeft_toLeftOf="parent"
                    android:layout_marginLeft="@dimen/dp_10"
                    android:layout_marginStart="@dimen/dp_10"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:textSize="@dimen/sp_14"
                    android:textColor="@color/text_222"
                    android:gravity="left"
                    android:lines="1"
                    android:visibility="gone"
                    android:ellipsize="end"/>


            <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/tv_yesterday_name"
                    android:layout_marginLeft="@dimen/dp_10"
                    android:layout_height="wrap_content"
                    android:layout_width="@dimen/dp_150"
                    app:layout_constraintLeft_toRightOf="@+id/tv_history_name_desc"
                    app:layout_constraintTop_toTopOf="@+id/tv_history_name_desc"
                    app:layout_constraintBottom_toBottomOf="@+id/tv_history_name_desc"
                    android:textSize="@dimen/sp_14"
                    android:textColor="@color/text_222"
                    android:gravity="left"
                    android:lines="1"
                    android:ellipsize="end"
                    tools:text="aaaaaaaaaa"/>

            <android.support.v7.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintRight_toRightOf="parent"
                    android:layout_marginRight="@dimen/dp_10"
                    android:layout_marginEnd="@dimen/dp_10"
                    app:layout_constraintTop_toTopOf="@+id/tv_yesterday_name"
                    app:layout_constraintBottom_toBottomOf="@+id/tv_yesterday_name"
                    android:textSize="@dimen/sp_14"
                    android:gravity="center"
                    android:text="@string/str_yesterday"/>

            <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_1"
                    android:background="@color/text_line"
                    app:layout_constraintBottom_toTopOf="parent"
                    android:layout_marginLeft="@dimen/dp_10"
                    android:layout_marginStart="@dimen/dp_10"/>


        </android.support.constraint.ConstraintLayout>
        <android.support.constraint.ConstraintLayout
                app:layout_constraintTop_toBottomOf="@+id/cl_main_yesterday"
                android:id="@+id/cl_main_today"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_75"
                android:background="@color/colorRateRed">


            <android.support.v7.widget.AppCompatTextView
                    android:text="@string/str_host"
                    android:id="@+id/tv_today_name_desc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintLeft_toLeftOf="parent"
                    android:layout_marginLeft="@dimen/dp_10"
                    android:layout_marginStart="@dimen/dp_10"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:textSize="@dimen/sp_14"
                    android:textColor="@color/text_222"
                    android:gravity="left"
                    android:lines="1"
                    android:visibility="gone"
                    android:ellipsize="end"/>


            <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/tv_today_name"
                    android:layout_marginLeft="@dimen/dp_10"
                    android:layout_height="wrap_content"
                    android:layout_width="@dimen/dp_150"
                    app:layout_constraintLeft_toRightOf="@+id/tv_today_name_desc"
                    app:layout_constraintTop_toTopOf="@+id/tv_today_name_desc"
                    app:layout_constraintBottom_toBottomOf="@+id/tv_today_name_desc"
                    android:textSize="@dimen/sp_14"
                    android:textColor="@color/text_222"
                    android:gravity="left"
                    android:lines="1"
                    android:ellipsize="end"
                    tools:text="aaaaaaaaaa"/>

            <android.support.v7.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintRight_toRightOf="parent"
                    android:layout_marginRight="@dimen/dp_10"
                    android:layout_marginEnd="@dimen/dp_10"
                    app:layout_constraintTop_toTopOf="@+id/tv_today_name_desc"
                    app:layout_constraintBottom_toBottomOf="@+id/tv_today_name_desc"
                    android:textSize="@dimen/sp_14"
                    android:gravity="center"
                    android:text="@string/string_today"/>

            <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_1"
                    android:background="@color/text_line"
                    app:layout_constraintBottom_toTopOf="parent"
                    android:layout_marginLeft="@dimen/dp_10"
                    android:layout_marginStart="@dimen/dp_10"/>

        </android.support.constraint.ConstraintLayout>
        <android.support.constraint.ConstraintLayout
                app:layout_constraintTop_toBottomOf="@+id/cl_main_today"
                android:id="@+id/cl_main_tomorrow"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_75"
                android:background="@color/drop_down_selected">


            <android.support.v7.widget.AppCompatTextView
                    android:text="@string/str_host"
                    android:id="@+id/tv_tomorrow_name_desc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintLeft_toLeftOf="parent"
                    android:layout_marginLeft="@dimen/dp_10"
                    android:layout_marginStart="@dimen/dp_10"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:textSize="@dimen/sp_14"
                    android:textColor="@color/text_222"
                    android:gravity="left"
                    android:lines="1"
                    android:visibility="gone"
                    android:ellipsize="end"/>


            <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/tv_tomorrow_name"
                    android:layout_marginLeft="@dimen/dp_10"
                    android:layout_height="wrap_content"
                    android:layout_width="@dimen/dp_150"
                    app:layout_constraintLeft_toRightOf="@+id/tv_tomorrow_name_desc"
                    app:layout_constraintTop_toTopOf="@+id/tv_tomorrow_name_desc"
                    app:layout_constraintBottom_toBottomOf="@+id/tv_tomorrow_name_desc"
                    android:textSize="@dimen/sp_14"
                    android:textColor="@color/text_222"
                    android:gravity="left"
                    android:lines="1"
                    android:ellipsize="end"
                    tools:text="aaaaaaaaaa"/>

            <android.support.v7.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintRight_toRightOf="parent"
                    android:layout_marginRight="@dimen/dp_10"
                    android:layout_marginEnd="@dimen/dp_10"
                    app:layout_constraintTop_toTopOf="@+id/tv_tomorrow_name_desc"
                    app:layout_constraintBottom_toBottomOf="@+id/tv_tomorrow_name_desc"
                    android:textSize="@dimen/sp_14"
                    android:gravity="center"
                    android:text="@string/string_tomorrow"/>

            <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_1"
                    android:background="@color/text_line"
                    app:layout_constraintBottom_toTopOf="parent"
                    android:layout_marginLeft="@dimen/dp_10"
                    android:layout_marginStart="@dimen/dp_10"/>

        </android.support.constraint.ConstraintLayout>


    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>